add gameBoard factory function, add Cell population function

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Hello there!</h1>
+    <p>Welcome to TicTacToe! Please turn your attention to the console!</p>
 </body>
 </html>
