--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Hello there!</h1>
-    <p>Welcome to TicTacToe! Please turn your attention to the console!</p>
+    <p>Welcome to TicTacToe!</p>
+    <div class="container">
+        <h1 class="turn"></h1>
+        <div class="board"></div>
+    </div>
+
 </body>
 </html>
