--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
     <h1>Welcome to TicTacToe!</h1>
 
-    <!-- Περιοχή για εισαγωγή παικτών -->
     <div class="player-setup">
         <input type="text" id="player1" placeholder="Player 1 Name">
         <input type="text" id="player2" placeholder="Player 2 Name">
@@ -18,10 +17,10 @@
     </div>
 
     <div class="container">
-        <h2 class="turn"></h2>  <!-- Εμφάνιση του ποιος παίζει -->
-        <div class="board"></div><!-- Το ταμπλό του παιχνιδιού -->
-        <p class="message"></p>  <!-- Μηνύματα Νίκης/Ισοπαλίας -->
-        <button id="restartGame">Restart Game</button>  <!-- Κουμπί Επανεκκίνησης -->
+        <h2 class="turn"></h2>  
+        <div class="board"></div>
+        <p class="message"></p> 
+        <button id="restartGame">Restart Game</button> 
     </div>
 </body>
 </html>
